--- a/jettons/GNK.yaml
+++ b/jettons/GNK.yaml
@@ -1,4 +1,5 @@
 name: GONKA AI
+description: This is the official GNK TON bridge for scaling the GONKA AI project within the Telegram ecosystem to create a decentralized ASI. GNK on the TON blockchain is a utility token used for creating and renting GONKA AI nodes.
 image: "https://gnkton.com/gnk_ton.png"
 address: EQDw8Wpn7WegvcK5bjt1JBa-1p2z6lCeWvqZ6mPi48Wo1ttl
 symbol: GNK
