--- a/jettons/GNK.yaml
+++ b/jettons/GNK.yaml
@@ -1,5 +1,5 @@
 name: GONKA AI
-description: This is the official GNK TON bridge for scaling the GONKA AI project within the Telegram ecosystem to create a decentralized ASI. GNK on the TON blockchain is a utility token used for creating and renting GONKA AI nodes.
+description: GNK is the utility token of the GONKA AI ecosystem on TON. It is used for access to platform features, participation in ecosystem activities, and future governance mechanisms. The project is community-driven and focused on AI-related tools and infrastructure within the Telegram ecosystem.
 image: "https://gnkton.com/gnk_ton.png"
 address: EQDw8Wpn7WegvcK5bjt1JBa-1p2z6lCeWvqZ6mPi48Wo1ttl
 symbol: GNK
